--- a/public/style/css/typography.scss
+++ b/public/style/css/typography.scss
@@ -1,12 +1,12 @@
 @import 'mixins';
 
 body, p, button, textarea, input, select, label{ font-size: 16px; }
-h1, h2, h3, h4, h5, h6, p, span, label, li, th, td{ color: $grey; }
-textarea, input, select { color: $stormGrey; }
+h1, h2, h3, h4, h5, h6, p, span, label, li, th, td{ color: grey; }          //todo: change
+textarea, input, select { color: grey; }                                    //todo: change
 a{ text-decoration: none; color: #fff; }
 
 body, h1, h2, h3, h4, h5, h6, p, li, a, input, textarea, select, button{
-    font-family: 'Source Sans Pro', Arial, sans-serif;
+    font-family: Arial, sans-serif;
     font-weight: normal;
 }
 
@@ -16,17 +16,3 @@ h3 { font-size: 1.375em; }      // 22/16
 h4 { font-size: 1em; }          // 16
 h5 { font-size: 0.75em; }       // 12/16
 h6 { font-size: 0.625em; }      // 10/16
-
-//chart text colours
-text {fill: $grey; }
-text.white {fill: #fff; }
-
-.line-chart svg,
-.pie-chart svg,
-.multi-line-chart svg,
-.horizontal-bar-chart svg,
-.vertical-bar-chart svg{
-    font-size: 0.75em; //12/16
-    
-    h3 { font-weight: bold; }
-} 
