implemented basic pagination

--- a/public/style/css/modules/search-page.scss
+++ b/public/style/css/modules/search-page.scss
@@ -8,7 +8,28 @@
     
     .results{
         
-        li{
+        ul.pagination-btns li{
+            float: left;
+            margin-right: 10px;
+            
+            a{
+                cursor: pointer;
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+                padding: 5px 8px;
+                background: lighten($marguerite, 20%);
+                
+                &:hover, &.active{
+                    background: lighten($marguerite, 10%);
+                    text-decoration: none;
+                    color: #fff;
+                }
+            }
+            
+        }
+        
+        ul.items li{
             background: darken($lavender, 5%);
             padding: 20px;
             margin: 2% auto 0;
@@ -31,11 +52,3 @@
         }
     }
 }
-/*
-<div style="display:table;">
-  <div style="display:table-cell;vertical-align:middle;">
-    <div style="margin-left:auto;margin-right:auto;"></div>
-  </div>
-</div>
-
-*/
