--- a/public/style/css/modules/buttons.scss
+++ b/public/style/css/modules/buttons.scss
@@ -6,6 +6,7 @@ button{
     color: #fff;
     background-color: transparent;
     padding: 7px 10px;
+    text-align: center;
     
     &.green{
         background-color: $meadow;
