removed debugs, console logs and commented out code.

--- a/public/style/css/modules/search-page.scss
+++ b/public/style/css/modules/search-page.scss
@@ -2,9 +2,7 @@
 
 .search-page{
     
-    .btns-container{
-        margin: 20px auto;
-    }
+    .btns-container { margin: 20px auto; }
     
     .results{
         
