--- a/public/style/css/base.scss
+++ b/public/style/css/base.scss
@@ -45,28 +45,8 @@ img{ max-width: 100%; }
 *******************************/
 button, .btn, a, a:after, span { @include transition-mixin; }
 button, textarea, input, select, option { outline: none; }
-textarea, input, select { border: 1px solid $jordyBlue; }               //todo: change
+textarea, input, select { border: 1px solid $jordyBlue; }
 input, textarea { padding: 6px 10px; background-color: darken($lavender, 10%); }
-
-textarea:hover, textarea:focus,
-input:hover, input:focus,
-select:hover, select:focus{
-    border: 1px solid green;                                    //todo: change
-}
-
-//disable label text selection
-label{ 
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-//remove red outline in Firefox from input fields marked as required
-:invalid, :-moz-submit-invalid, :-moz-ui-invalid { box-shadow: none; }
-
 
 //page specific styles
 body { background: $lavender; }
